Added all 20 drivers

--- a/index.html
+++ b/index.html
@@ -17,8 +17,114 @@
     <!-- React test -->
     <div id="like_button_container"></div>
     <!--End  React test -->
+    <section id="driverSection">
 
-
+        <div class="driverCard">
+            <h4 id="driverName">Name: Alexander Albon</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/alb.png" alt="Albon">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Fernando Alanzo</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/alo.png" alt="Alonzo">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Valteri Bottas</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/bot.png" alt="Bottas">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Pierre Gasly</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/gas.png" alt="Gasly">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Louis Hamilton</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/ham.png" alt="Hamilton">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Nico Hulkenburg</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/hul.png" alt="Hulkennburg">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Nicholas Latifi</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/lat.png" alt="Latifi">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: </h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/lec.png" alt="Leclerc">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Kevin Magnussen</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/mag.png" alt="Magnussen">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Lando Norris</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/nor.png" alt="Norris">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Estaban Ocon</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/oco.png" alt="Ocon">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Sergio Perez</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/per.png" alt="Perez">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Daniel Ricciardo</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/ric.png" alt="Ricciardo">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: George Russel</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/rus.png" alt="Russell">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Carlos Sainz</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/sai.png" alt="Sainz">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Mick Schumacher</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/sch.png" alt="Schumacher">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Lance Stroll</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/str.png" alt="Stroll">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Yuki Tsunoda</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/tsu.png" alt="Tsunoda">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Max Verstappen</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/ver.png" alt="Verstappen">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Sebastian Vettel</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/vet.png" alt="Vettel">
+        </div>
+        <div class="driverCard">
+            <h4 id="driverName">Name: Zhou Guanyu</h4>
+            <p id="driverInfo">info</p>
+            <img src="drivers/zho.png" alt="Zhou">
+        </div>
+    </section>
 
 
     <!-- Load React. -->
